package com.aruna.wcms.vehicle.model;

public class Vehicle {
    private Integer id;

    private String type;

    private String model;

    private String manufacture;

    private String manufactureYear;

    private String fuelType;

    private String seat;

    private String gearType;
}
